--- a/concord/teaching-teamwork/add-editor/editor/index.html
+++ b/concord/teaching-teamwork/add-editor/editor/index.html
@@ -16,6 +16,8 @@
     <script src="../vendor/jsonlint/lib/jsonlint.js"></script>
     <script src="../vendor/codemirror/addon/lint/lint.js"></script>
     <script src="../vendor/codemirror/addon/lint/json-lint.js"></script>
+    <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
+    <script src="https://cdn.firebase.com/js/simple-login/1.6.4/firebase-simple-login.js"></script>
     <script src="editor.js"></script>
   </body>
 </html>
