--- a/concord/teaching-teamwork/math-scratchpad/index.html
+++ b/concord/teaching-teamwork/math-scratchpad/index.html
@@ -382,6 +382,7 @@
             this.dragged = false;
           }
           this.dragging = false;
+          this.focus();
         },
         
         open: function (e) {
