Added dropshadow to math-scratchpad/index.html

--- a/concord/teaching-teamwork/math-scratchpad/index.html
+++ b/concord/teaching-teamwork/math-scratchpad/index.html
@@ -25,6 +25,9 @@
         width: 400px;
         border: 1px solid #777;
         background-color: #ddd;
+        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);        
       }
       
       .scratchpad {
@@ -232,8 +235,8 @@
             open: true,
             closeRight: 10,
             closeTop: 10,
-            openRight: 10,
-            openTop: 10,
+            openRight: 25,
+            openTop: 25,
             output: null,
             history: [],
             showHelp: true
