Fixed PIC paths

--- a/concord/teaching-teamwork/pic/index.html
+++ b/concord/teaching-teamwork/pic/index.html
@@ -2,20 +2,14 @@
   <head>
     <title>PIC: Teaching Teamwork</title>
 
-    <link href='../css/pic.css' rel='stylesheet' type='text/css' />
+    <link href='css/pic.css' rel='stylesheet' type='text/css' />
 
-    <script src="../vendor/jquery/jquery.js"></script>
-    
-    <!-- script src="http://fb.me/react-with-addons-0.12.2.js"></script -->
-    <!-- script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script -->
-    <!-- script src='http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.5.0/fabric.min.js'></script -->
-
-    <script src="../js/react-with-addons.js"></script>
-    <script src="../js/fabric.min.js"></script>
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="js/react-with-addons.js"></script>
   </head>
   <body>
     <div id="content"></div>
 
-    <script src="../js/pic.js"></script>
+    <script src="js/pic.js"></script>
   </body>
 </html>
